<resources>
	<string name="app_name">Kid Power</string>
	<string name="app_id">72861540052FEDC</string>
	<string name="facebook_app_id">1573994319569302</string>
	<string name="ShareSheetTitle">Share via</string>
	<string name="ShareAppSheetTitle">Share via</string>
	<string name="Gmail">Gmail</string>
	<string name="Facebook">Facebook</string>
	<string name="Twitter">Twitter</string>
	<string name="Message">Message</string>
	<string name="Mail">Mail</string>
	<string name="font_mikado_bold">Mikado_bold.otf</string>
	<string name="font_pfdindisplaypro_regular">PFDinDisplayPro_regular.otf</string>
	<string name="font_pfdindisplaypro_italic">PFDinDisplayPro_italic.otf</string>
	<string name="font_awesome">fontawesome-webfont.ttf</string>
	<string name="error_title">Error</string>
	<string name="back">Back</string>
	<string name="continue_string">Continue</string>
	<string name="parents">Parents</string>
	<string name="logo_text">
        Adults, please create your account first.\n
        Then create Family Accounts for kids.\n
        Be sure to link your Band or phone to the right account.
    </string>
	<string name="presentation_description">Presented by Disney and Target</string>
	<string name="starwar_sponser">Presenting Sponsors <i>Star Wars: Force for Change</i> and Target</string>
	<string name="default_error">
        An unidentified problem occurred. Please contact technical support.
    </string>
	<string name="network_error_lost_network_connection">
        An internet connection is required. Please connect and try again.
    </string>
	<string name="google_connection_failed">
        Connection to Google failed. Please try again later.
    </string>
	<string name="create_new_user">New User</string>
	<string name="join_kid_power_team">Join the Kid Power Team!</string>
	<string name="welcome_back">Welcome back!</string>
	<string name="or_have_account">Learn more, or have an account? Log in</string>
	<string name="or_create">Learn more, or Create a New Account</string>
	<string name="cool_name">Cool name!</string>
	<string name="thats_taken">Sorry, that\'s taken. If this is you, Log in.</string>
	<string name="almost_there">Almost there!</string>
	<string name="setup_your_account_with">Setup your account with…</string>
	<string name="email">Email</string>
	<string name="facebook">Facebook</string>
	<string name="or">or</string>
	<string name="create_a_parent_account">Create a Parent Account</string>
	<string name="create_your_username">Create your username</string>
	<string name="create_your_password">Create your password</string>
	<string name="account_name_exist">There\'s already an account with that name. If this is you, Log in.</string>
	<string name="account_email_exist">There\'s already an account with that email. If this is you, Log in.</string>
	<string name="create_an_acount">Create an account</string>
	<string name="choose_your_birthday">Choose your birthday</string>
	<string name="choose_a_birthday">Choose birthday</string>
	<string name="date_of_birth_date_format">Date of Birth (MM / DD / YYYY)</string>
	<string name="dob_format">MM / DD / YYYY</string>
	<string name="great_job">Great job!</string>
	<string name="now_when_is_your_birthday">Now, when\'s your birthday?</string>
	<string name="creating_account">Creating account…</string>
	<string name="signing_in">Signing in…</string>
	<string name="signing_out">Signing out…</string>
	<string name="empty_user_name_alert">Please enter a username</string>
	<string name="empty_password_alert">Please enter a password</string>
	<string name="account_created">Account created!</string>
	<string name="family_account_created" formatted="false">
        %s Family account created
    </string>
	<string name="family_account_created_word_capitalized">Family Account created</string>
	<string name="account_created_question">
        Do you need to set up kids with Family Accounts?
    </string>
	<string name="account_created_description">
        (You should only choose this option if you\'re the only person in your family with a new
        Kid Power Band)
    </string>
	<string name="family_account_created_description" formatted="false">
        If %s has an activity tracker, you should link it now.
    </string>
	<string name="yes_go_to_family_accounts">Yes, go to Family Accounts</string>
	<string name="no_its_just_me">No, it\'s just me</string>
	<string name="or_comma">or,&#160;</string>
	<string name="child_restriction_title">
        Please hand your device to an adult or parent
    </string>
	<string name="child_restriction_description">
        Parents, please create an adult account first (must be older than 13 years old)
    </string>
	<string name="create_account">Create Account</string>
	<string name="got_a_band_lets_get_started">Got a Band?\n
		Let\'s get started!</string>
	<string name="whose_band_are_you_linking">Whose Band are you linking?</string>
	<string name="do_not_have_a_band">Don\'t have a Band? Get one</string>
	<string name="get_one_band">Get one</string>
	<string name="create_a_username">Create a username</string>
	<string name="dialog_user_name_do_not_forget">Oops! Don\'t forget to create your username.</string>
	<string name="dialog_username_not_verified">Hang on! Your username isn\'t verified yet.</string>
	<string name="dialog_username_someone_picked_that">Sorry, someone\'s already picked that name. Try another one.</string>
	<string name="dialog_username_password_empty">
		Oops! Your username and
		password can\'t be blank.
	</string>
	<string name="dialog_username_password_invalid">
		Oops! Your username must be
		valid and your password can\'t be
		blank.
	</string>
	<string name="dialog_password_blank">
		Oops! Your password can\'t be
		blank.
	</string>
	<string name="dialog_email_dob_empty">
		Oops! Your email and date of
		birth can\'t be blank.
	</string>
	<string name="dialog_email_dob_invalid">
		Oops! Your email must be
		valid and date of birth
		can\'t be blank.
	</string>
	<string name="register_searching_band">Searching for activity trackers...</string>
	<string name="register_select_matching_band">Select the matching Band ID below</string>
	<string name="register_tap_your_band">Tap your Band to see\n
		your Band Id</string>
	<string name="which_band_do_you_want">Which Band do you want to\n
		link to %s?</string>
	<string name="dont_see_band_search_again">Don\'t see your Band?\n
		Make sure it\'s charged, powered on, then Search again</string>
	<string name="search_again">Search again</string>
	<string name="error_msg_bluetooth_off">Uh oh! Bluetooth is disabled on this phone. Go to settings and enable it to link or sync your Band.</string>
	<string name="error_msg_no_bands_found">No Bands found. Make sure your Band is charged, powered on and nearby, then search again.</string>
	<string name="error_msg_googlefit_link_failed">Oops! The connection dropped. Please try linking again later.</string>
	<string name="error_msg_band_link_failed">Oops! The connection dropped. Make sure your Band is charged, powered on and nearby, then try linking again.</string>
	<string name="parent_account_created">Parent Account Created!</string>
	<string name="finish_setting_up_account">
		Now you\'re ready to finish setting up the
		account for
	</string>
	<string name="finish">Finish</string>
	<string name="activity_trackers">Activity Trackers</string>
	<string name="to_participate">To participate in UNICEF Kid Power, the Kid Power app needs to get your steps from a hardware device that counts steps.</string>
	<string name="there_are_two_ways_to_start_counting_steps">There are two ways to start counting steps:</string>
	<string name="use_a_kid_power_band">1) Use a Kid Power Band</string>
	<string name="you_can_buy_a_kid_power_band_online">You can buy a Kid Power Band online</string>
	<string name="a_device_connected_to_google_fit">2) A device connected to Google Fit</string>
	<string name="google_fit_is_a_free_app">Google Fit is a free app by Google which is sort of the \"Grand Central Station\" for all your activity data. You can use this %s to track steps in Google Fit, or even most 3rd-party activity trackers.\nGet Google Fit on the Play Store.</string>
	<string name="what_activity_data_does_kid_power_use">What activity data does Kid Power use?</string>
	<string name="the_kid_power_app_only_accesses_steps">The Kid Power app only accesses steps and calories.</string>
	<string name="your_data_is_never_shared">Yes, your data is never shared with any 3rd parties for any reason, now or ever.</string>
	<string name="is_my_data_safe">Is my data safe?</string>
	<string name="yes_at_any_time"><![CDATA[Yes, at any time. On this %s, tap Menu > Settings > Google Fit Data > Connected Apps > Kid Power]]></string>
	<string name="close">Close</string>
	<string name="set_up_an_activity_tracker_later">Set up an activity tracker later</string>
	<string name="can_i_revoke_permission">Can I revoke permission?</string>
	<string name="try_these_3_things">Try these 3 things:</string>
	<string name="lower_than_expected_when_syncing">(You successfully connected your Android device to Google Fit, but your steps were lower than expected when Syncing.)</string>
	<string name="check_the_basics">1. Check the basics</string>
	<string name="basic_reason">Whenever you\'re using this %s or an activity tracker to get steps into Google Fit, that device needs to be carried with you, charged up and turned on.</string>
	<string name="kid_power_has_permission">2. Kid Power has permission?</string>
	<string name="kid_power_permission_reason"><![CDATA[Kid Power needs permission to get steps from Google Fit, but it may have been revoked. Check that Kid Power has permission by launching Menu > Settings > Google Fit Data > Connected Apps. If you don\'t see Kid Power listed it means that permission was revoked. Android requires that you delete and re-install the Kid Power app to re-authorize it.]]></string>
	<string name="tracker_has_permission">3. Tracker has permission?</string>
	<string name="activity_tracker_needs_permission">Your %s or activity tracker needs permission to put steps into Google Fit, but it may have been revoked.</string>
	<string name="using_this_s">Using this %s:</string>
	<string name="check_that_this_dev_still_has_permission"><![CDATA[Check that this %s still has permission by going to Google Fit > Settings.\nUnder Google Fit Data, make sure \"Activity detection\" is turned on.]]></string>
	<string name="using_an_activity_tracker">Using an activity tracker:</string>
	<string name="jawbone_or_misfit"><![CDATA[If you\'re using an activity tracker like a Jawbone or Misfit, go to Menu > Settings > Google Fit Data > Connected Apps and make sure your activity tracker\'s app is listed.\nIf you don\'t see it, re-install it from the Play Store.]]></string>
	<string name="didn_t_solve_it_get_in_touch">Didn\'t solve it? Get in touch!</string>
	<string name="syncing_with_google_fit">Syncing with Google Fit</string>
	<string name="sync_on_that_device_google_fit">Your Kid Power account is setup to get steps from Google Fit on the %s Android device. To continue using Google Fit to get steps, please Sync on that device.</string>
	<string name="new_or_restored_deivce">New or restored device?</string>
	<string name="relink_to_google_fit">If you replaced or restored the %s Android device, the Kid Power app needs to be re-linked to Google Fit.</string>
	<string name="relink_guide_google_fit"><![CDATA[To re-link the Kid Power app to Google Fit, visit More > Profile > Activity Tracker and un-link Google Fit, then re-link it.]]></string>
	<string name="switch_to_kpb">Switch to a Kid Power Band</string>
	<string name="new_kid_power_band"><![CDATA[To get steps using a Kid Power Band instead of Google Fit, visit your Activity Tracker page in More > Profile > Activity Tracker and un-link Google Fit, then link your new Kid Power Band.]]></string>
	<string name="sync_on_s">Sync on %s</string>
</resources>