<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

<RelativeLayout android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/kph_color_main_background"
				android:id="@+id/layout_parent">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingStart="@dimen/dimen_margin_15"
		android:paddingEnd="@dimen/dimen_margin_15"
		android:paddingTop="@dimen/dimen_margin_15"
		android:paddingBottom="@dimen/dimen_margin_15">
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/activity_trackers"
			android:textColor="@android:color/white"
			style="@style/style_textview_heading"
			android:textSize="@dimen/dimen_font_size_heading_count_big"
			/>
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_marginTop="@dimen/dimen_10dp"
			android:text="@string/to_participate"
			android:textColor="@android:color/white"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:layout_marginTop="@dimen/dimen_margin_20"
			android:text="@string/there_are_two_ways_to_start_counting_steps"
			android:textColor="@android:color/white"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:layout_marginTop="@dimen/dimen_margin_20"
			android:text="@string/use_a_kid_power_band"
			android:textColor="@android:color/white"
			android:textStyle="bold"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:layout_marginTop="@dimen/dimen_4dp"
			android:text="@string/you_can_buy_a_kid_power_band_online"
			android:textColor="@android:color/white"
			android:id="@+id/buy_kidpower_text"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:layout_marginTop="@dimen/dimen_margin_20"
			android:text="@string/a_device_connected_to_google_fit"
			android:textColor="@android:color/white"
			android:textStyle="bold"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>

		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:id="@+id/get_google_fit_on_store_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dimen_4dp"
			android:gravity="left|center_vertical"
			android:text="@string/google_fit_is_a_free_app"
			android:textColor="@android:color/white"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:layout_marginTop="@dimen/dimen_margin_20"
			android:text="@string/what_activity_data_does_kid_power_use"
			android:textColor="@android:color/white"
			android:textStyle="bold"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:layout_marginTop="@dimen/dimen_4dp"
			android:text="@string/the_kid_power_app_only_accesses_steps"
			android:textColor="@android:color/white"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:layout_marginTop="@dimen/dimen_margin_20"
			android:text="@string/is_my_data_safe"
			android:textColor="@android:color/white"
			android:textStyle="bold"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:layout_marginTop="@dimen/dimen_4dp"
			android:text="@string/your_data_is_never_shared"
			android:textColor="@android:color/white"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:layout_marginTop="@dimen/dimen_margin_20"
			android:text="@string/can_i_revoke_permission"
			android:textColor="@android:color/white"
			android:textStyle="bold"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>
		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:layout_marginTop="@dimen/dimen_4dp"
			android:text="@string/yes_at_any_time"
			android:textColor="@android:color/white"
			android:id="@+id/permission_text"
			android:textSize="@dimen/dimen_font_size_base_subtitle"/>
	</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:orientation="vertical"
		android:id="@+id/button_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:paddingStart="@dimen/dimen_margin_15"
		android:paddingEnd="@dimen/dimen_margin_15"
		android:paddingBottom="@dimen/dimen_margin_20"
		android:gravity="center_horizontal"
		android:background="@color/kph_color_translucent_blue">

		<org.unicefkidpower.kid_power.View.CustomControls.KPHButton
			android:layout_width="match_parent"
			android:layout_height="@dimen/dimen_button_general_height"
			android:text="@string/close"
			android:layout_marginTop="@dimen/dimen_margin_20"
			android:id="@+id/btn_close"
			style="@style/style_button_general"/>

		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:id="@+id/later_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/dimen_2dp"
			android:gravity="center"
			android:paddingTop="@dimen/dimen_12dp"
			android:text="@string/set_up_an_activity_tracker_later"
			android:textColor="@android:color/white"
			android:textSize="@dimen/dimen_font_size_base_subtitle"
			/>

	</LinearLayout>
</RelativeLayout>


</RelativeLayout>