<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

<RelativeLayout android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/kph_color_main_background"
				android:id="@+id/layout_parent">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingStart="@dimen/dimen_12dp"
			android:paddingEnd="@dimen/dimen_12dp"
			android:paddingTop="@dimen/dimen_12dp"
			android:paddingBottom="@dimen/dimen_12dp">

			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/style_textview_heading"
				android:textSize="@dimen/dimen_32dp"
				android:gravity="center"
				android:text="@string/try_these_3_things"
				android:textColor="@android:color/white"
				android:visibility="visible"/>
			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_10dp"
				style="@style/style_textview_general"
				android:textSize="@dimen/dimen_16dp"
				android:gravity="center"
				android:text="@string/lower_than_expected_when_syncing"
				android:textColor="@android:color/white"
				android:visibility="visible"/>

			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_32dp"
				style="@style/style_textview_heading"
				android:textSize="@dimen/dimen_20dp"
				android:gravity="left"
				android:text="@string/check_the_basics"
				android:textColor="@android:color/white"
				android:visibility="visible"/>
			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_2dp"
				android:id="@+id/basic_reason_text"
				style="@style/style_textview_general"
				android:textSize="@dimen/dimen_16dp"
				android:gravity="left"
				android:text="@string/basic_reason"
				android:textColor="@android:color/white"
				android:visibility="visible"/>

			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_32dp"
				style="@style/style_textview_heading"
				android:textSize="@dimen/dimen_20dp"
				android:gravity="left"
				android:text="@string/kid_power_has_permission"
				android:textColor="@android:color/white"
				android:visibility="visible"/>
			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_2dp"
				android:id="@+id/kidpower_permission_text"
				style="@style/style_textview_general"
				android:textSize="@dimen/dimen_16dp"
				android:gravity="left"
				android:text="@string/kid_power_permission_reason"
				android:textColor="@android:color/white"
				android:visibility="visible"/>

			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_32dp"
				style="@style/style_textview_heading"
				android:textSize="@dimen/dimen_20dp"
				android:gravity="left"
				android:text="@string/tracker_has_permission"
				android:textColor="@android:color/white"
				android:visibility="visible"/>

			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:id="@+id/tracker_permission_text"
				style="@style/style_textview_general"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_2dp"
				android:gravity="left"
				android:text="@string/activity_tracker_needs_permission"
				android:textColor="@android:color/white"
				android:textSize="@dimen/dimen_16dp"
				android:visibility="visible"/>

			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:id="@+id/tracker_permission_text2_heading"
				style="@style/style_textview_general"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_16dp"
				android:gravity="left"
				android:text="@string/using_this_s"
				android:textColor="@android:color/white"
				android:textSize="@dimen/dimen_16dp"
				android:textStyle="bold"
				android:visibility="visible"/>

			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:id="@+id/tracker_permission_text2_sub"
				style="@style/style_textview_general"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_margin_2"
				android:gravity="left"
				android:text="@string/check_that_this_dev_still_has_permission"
				android:textColor="@android:color/white"
				android:textSize="@dimen/dimen_16dp"
				android:visibility="visible"/>
			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_16dp"
				android:id="@+id/tracker_permission_text3_heading"
				style="@style/style_textview_general"
				android:textStyle="bold"
				android:textSize="@dimen/dimen_16dp"
				android:gravity="left"
				android:text="@string/using_an_activity_tracker"
				android:textColor="@android:color/white"
				android:visibility="visible"/>
			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_margin_2"
				android:id="@+id/tracker_permission_text3_sub"
				style="@style/style_textview_general"
				android:textSize="@dimen/dimen_16dp"
				android:gravity="left"
				android:text="@string/jawbone_or_misfit"
				android:textColor="@android:color/white"
				/>
		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:paddingStart="@dimen/dimen_12dp"
		android:paddingEnd="@dimen/dimen_12dp"
		android:id="@+id/buttons_layout"
		android:layout_alignParentBottom="true"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/kph_color_translucent_blue">

		<org.unicefkidpower.kid_power.View.CustomControls.KPHButton
			android:layout_width="match_parent"
			android:layout_height="@dimen/dimen_button_general_height"
			android:layout_marginStart="@dimen/dimen_margin_15"
			android:layout_marginEnd="@dimen/dimen_margin_15"
			android:layout_marginTop="@dimen/dimen_margin_20"
			android:id="@+id/btn_close"
			style="@style/style_button_general"
			android:text="@string/close"/>

		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/dimen_10dp"
			android:paddingBottom="@dimen/dimen_10dp"
			android:id="@+id/text_link"
			android:gravity="center"
			android:layout_marginTop="@dimen/dimen_16dp"
			style="@style/style_textview_general"
			android:textSize="@dimen/dimen_16dp"
			android:text="@string/didn_t_solve_it_get_in_touch"
			android:textColor="@android:color/white"/>
	</LinearLayout>
</RelativeLayout>

</RelativeLayout>