<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
<RelativeLayout android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/kph_color_main_background"
				android:id="@+id/layout_parent">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/dimen_12dp">
			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/dimen_12dp"
				android:layout_marginEnd="@dimen/dimen_12dp"
				style="@style/style_textview_heading"
				android:textSize="@dimen/dimen_32dp"
				android:gravity="center"
				android:text="@string/syncing_with_google_fit"
				android:textColor="@android:color/white"
				android:visibility="visible"/>

			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_20dp"
				style="@style/style_textview_heading"
				android:textSize="@dimen/dimen_20dp"
				android:gravity="left"
				android:id="@+id/sync_on_textview"
				android:text="@string/sync_on_s"
				android:textColor="@android:color/white"
				android:visibility="visible"/>
			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_2dp"
				android:id="@+id/sync_on_contents_textview"
				style="@style/style_textview_general"
				android:textSize="@dimen/dimen_16dp"
				android:gravity="left"
				android:text="@string/sync_on_that_device_google_fit"
				android:textColor="@android:color/white"
				android:visibility="visible"/>

			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_32dp"
				style="@style/style_textview_heading"
				android:textSize="@dimen/dimen_20dp"
				android:gravity="left"
				android:text="@string/new_or_restored_deivce"
				android:textColor="@android:color/white"
				android:visibility="visible"/>
			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_2dp"
				android:id="@+id/restore_device_content1"
				style="@style/style_textview_general"
				android:textSize="@dimen/dimen_16dp"
				android:gravity="left"
				android:text="@string/relink_to_google_fit"
				android:textColor="@android:color/white"
				android:visibility="visible"/>
			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_20dp"
				android:id="@+id/restore_device_content2"
				style="@style/style_textview_general"
				android:textSize="@dimen/dimen_16dp"
				android:gravity="left"
				android:text="@string/relink_guide_google_fit"
				android:textColor="@android:color/white"
				android:visibility="visible"/>

			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_32dp"
				style="@style/style_textview_heading"
				android:textSize="@dimen/dimen_20dp"
				android:gravity="left"
				android:text="@string/switch_to_kpb"
				android:textColor="@android:color/white"
				android:visibility="visible"/>
			<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/dimen_2dp"
				android:id="@+id/switch_kpb_contents"
				style="@style/style_textview_general"
				android:textSize="@dimen/dimen_16dp"
				android:gravity="left"
				android:text="@string/new_kid_power_band"
				android:textColor="@android:color/white"
				android:visibility="visible"/>

		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:layout_alignParentBottom="true"
		android:id="@+id/buttons_layout"
		android:orientation="vertical"
		android:paddingStart="@dimen/dimen_12dp"
		android:paddingEnd="@dimen/dimen_12dp"
		android:background="@color/kph_color_translucent_blue"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal">

		<org.unicefkidpower.kid_power.View.CustomControls.KPHButton
			android:layout_width="match_parent"
			android:layout_height="@dimen/dimen_button_general_height"
			android:layout_marginStart="@dimen/dimen_margin_15"
			android:layout_marginEnd="@dimen/dimen_margin_15"
			android:layout_marginTop="@dimen/dimen_margin_20"
			android:id="@+id/btn_close"
			style="@style/style_button_general"
			android:text="@string/close"/>

		<org.unicefkidpower.kid_power.View.CustomControls.KPHTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/dimen_16dp"
			android:paddingBottom="@dimen/dimen_16dp"
			android:id="@+id/text_link"
			style="@style/style_textview_general"
			android:gravity="center"
			android:text="@string/didn_t_solve_it_get_in_touch"
			android:textColor="@android:color/white"
			android:textSize="@dimen/dimen_16dp"/>
	</LinearLayout>
</RelativeLayout>

</RelativeLayout>